tester/testsuite/extensions/arrays2/bad/bad001.jl
/* invalid depth when assigning */

void main() {
	int[] array = new int[10][10];
	printInt(array[0][0]);
}
